# titanic-package

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  fetch_titanic_dataset.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: CI.yml  PyPI.yml  main.yml
requirements/: requirements.txt  test_requirements.txt
tests/: conftest.py  test_features.py  test_get_title.py  test_prediction.py  test_validation.py
titanic_model/: config.yml  cross_validation.py  pipeline.py  predict.py  train_pipeline.py  tune_pipeline.py
titanic_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
titanic_model/config/: core.py
titanic_model/processing/: data_manager.py  features.py  validation.py
titanic_model/trained_models/: titanic_model_output_v0.0.2.pkl  titanic_model_output_v1.0.1.pkl  titanic_model_output_v1.1.0.pkl
titanic_package/: __init__.py  config.yml  pipeline.py  predict.py  train_pipeline.py
titanic_package/config/: core.py
titanic_package/datasets/: .~lock.train.csv#
titanic_package/processing/: data_manager.py  validation.py
